--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -37,5 +37,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy
-        run: echo "Deploying..."
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-files
+      - name: Output files
+        run: ls -la
