--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{steps.publish.outputs.script-file}}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,6 +27,9 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}'>>$GITHUB_OUTPUT ';'
       - name: upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -43,3 +48,5 @@ jobs:
           name: dist-files
       - name: Output files
         run: ls -la
+      - name: Print Script file name
+        run: echo "Script file is ${{needs.build.outputs.script-file}}"
